--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
 <head>
+   <title>Connection</title>
+    <meta name="description" content="Our first page" />
+    <meta name="keywords" content="html tutorial template" />
    <link rel="stylesheet" href="css.css">
    <meta charset="UTF-8">
    <link rel="preconnect" href="https://fonts.googleapis.com">
