--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </div>
 
-<div class="bodyt2">*INCOMING CALL. INCOMING CALL. INCOMING CALL*
+<div class="bodyt2">*INCOMING CALL*
 </div>
 <div id="btn">PRESS TO ACCEPT</div>
 
@@ -51,7 +51,7 @@
 <!-- <div id="btn">and talk!</div> -->
 
 
-<div class="header">thirty minutes later...</div>
+<!-- <div class="header">thirty minutes later...</div> -->
 <div class="container0">
 <div class="container">
     <div class="lover hidden">this. this is what i mean</div>
@@ -71,7 +71,7 @@
 
 </div>
 
-<div class="bodyt2">*INCOMING CALL. INCOMING CALL. INCOMING CALL*
+<div class="bodyt2">*INCOMING CALL*
 </div>
 <div id="btn2">PRESS TO ACCEPT</div>
 
@@ -89,7 +89,7 @@
 
 
 <body>
-    <div class="header">fifteen minutes later...</div>
+<!--     <div class="header">fifteen minutes later...</div> -->
     <div class="container0">
     <div class="container">
         <div class="lover hidden"><i>...</i></div>
@@ -108,7 +108,7 @@
 
 </div>
 
-<div class="bodyt2">*INCOMING CALL. INCOMING CALL. INCOMING CALL*
+<div class="bodyt2">*INCOMING CALL*
 </div>
 <div id="btn3">PRESS TO ACCEPT</div>
 <div class="container0">
@@ -122,7 +122,7 @@
 </div>
 <!-- <div id="btn3">and talk!</div> -->
 
-<div class="header">conclusion.</div>
+<!-- <div class="header">conclusion.</div> -->
 <div class="container0">
 <div class="container">
     <div class="lover hidden"><i>...</i></div>
