--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- <div id="btn">and talk!</div> -->
 
 
-<!-- <div class="header">thirty minutes later...</div> -->
+<div class="header"></div> 
 <div class="container0">
 <div class="container">
     <div class="lover hidden">this. this is what i mean</div>
