--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 
 <head>
-   <title>Connection</title>
+    <title>connection</title>
     <meta name="description" content="Our first page" />
     <meta name="keywords" content="html tutorial template" />
    <link rel="stylesheet" href="css.css">
    <meta charset="UTF-8">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link rel="icon" type="image/png" href="./img/phonefavi.jpg" />
    <link
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet">
 </head>
 <body>
 
-    <div class="header">"connection"</div>
+    <div class="header">connection</div>
     <div class="bodyt">an experience in (mis)communication<br><i>*scroll down</i></div>
     <div class="container0">
     <div class="container">
@@ -34,9 +35,11 @@
 
 </div>
 
+<div class="hidden">
 <div class="bodyt2">*INCOMING CALL*
 </div>
 <div id="btn">PRESS TO ACCEPT</div>
+</div>
 
 
 <div class="container0">
@@ -50,8 +53,8 @@
 </div>
 <!-- <div id="btn">and talk!</div> -->
 
-
-<div class="header"></div> 
+<!-- <div class="header">thirty minutes later...</div> -->
+ <div class="spacer"></div>
 <div class="container0">
 <div class="container">
     <div class="lover hidden">this. this is what i mean</div>
@@ -71,9 +74,11 @@
 
 </div>
 
-<div class="bodyt2">*INCOMING CALL*
-</div>
-<div id="btn2">PRESS TO ACCEPT</div>
+<div class="hidden">
+    <div class="bodyt2">*INCOMING CALL*
+    </div>
+    <div id="btn2">PRESS TO ACCEPT</div>
+    </div>
 
 <div class="container0">
  <div class="container">
@@ -88,8 +93,8 @@
 
 
 
-<body>
-<!--     <div class="header">fifteen minutes later...</div> -->
+    <!-- <div class="header">fifteen minutes later...</div> -->
+    <div class="spacer"></div>
     <div class="container0">
     <div class="container">
         <div class="lover hidden"><i>...</i></div>
@@ -108,9 +113,11 @@
 
 </div>
 
-<div class="bodyt2">*INCOMING CALL*
-</div>
-<div id="btn3">PRESS TO ACCEPT</div>
+<div class="hidden">
+    <div class="bodyt2">*INCOMING CALL*
+    </div>
+    <div id="btn3">PRESS TO ACCEPT</div>
+    </div>
 <div class="container0">
  <div class="container">
    <div id="output5"></div>
@@ -123,6 +130,7 @@
 <!-- <div id="btn3">and talk!</div> -->
 
 <!-- <div class="header">conclusion.</div> -->
+<div class="spacer"></div>
 <div class="container0">
 <div class="container">
     <div class="lover hidden"><i>...</i></div>
